[package]
name = "tinymist-render"
description = "Rendering features for tinymist."
categories = ["compilers", "command-line-utilities"]
keywords = ["api", "language", "typst"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tinymist-query.workspace = true
reflexo-vec2svg.workspace = true
reflexo-typst.workspace = true
reflexo-typst2vec.workspace = true
reflexo.workspace = true
tinymist-std.workspace = true
base64.workspace = true
log.workspace = true

[lints]
workspace = true
